--- a/css/styles.css
+++ b/css/styles.css
@@ -7,8 +7,11 @@
     --button-color: #4D5AE5;    
     --btn-bgd:#F4F4FD;
     --button-hover-background: #404BBF;
-    --card-border: #E7E9FC;
+    --card-border: #E7E9FC; 
+    --customers-color:#8E8F99; 
+    --modal-color: #FCFCFC;
 
+    --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 *,
@@ -111,6 +114,7 @@ p {
 }
 
 .nav-link{
+    position: relative;
     display: inline-block;
     padding-top: 24px;
     padding-bottom: 24px;
@@ -120,6 +124,8 @@ p {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--nav-header-color);
+
+    transition: color var(--animation);
 }
 
 .nav-link:hover,
@@ -161,7 +167,9 @@ address{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.5;       
-    letter-spacing: 0.02em;     
+    letter-spacing: 0.02em;
+    
+    transition: color var(--animation);
 }
 
 .header-link-item:hover,
@@ -169,17 +177,40 @@ address{
     color: var(--button-hover-background);
 }
 
+.nav-link::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    height: 4px;   
+    border-radius: 2px;
+
+    transition: background-color var(--animation);
+}
+
+.nav-link.current::after{
+    background-color: var(--button-hover-background);
+
+}
 /* Hero */
 .hero-container {
-    background-color: var(--nav-header-color); 
-    padding-top: 188px;
-    padding-bottom: 188px;    
+    margin: 0 auto;
+    background-color: var(--nav-header-color);        
+    background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)), url(../images/hero/hero_bg.jpg); 
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    max-width: 1440px;    
 }
 
 .hero-flex{
     display: flex;
     flex-direction: column;
     align-items: center;
+    padding-top: 188px;
+    padding-bottom: 188px; 
 }
 
 .hero-item{
@@ -214,7 +245,9 @@ address{
     border: none;
     padding: 16px 32px;
     align-items: flex-start;
-    gap: 10px;  
+    gap: 10px;
+
+    transition: background-color var(--animation);  
 }
 
 .hero-button:hover,
@@ -248,8 +281,15 @@ address{
     gap: 24px;
 }
 
-.feature-item{
-    flex-basis: calc((100% - 3 * 24px) / 4);
+
+
+.feature-icon{
+    border-radius: 4px;
+    background: var(--btn-bgd);
+    padding: 24px 100px;   
+    width: 264px;
+    height: 112px; 
+    margin-bottom: 8px;
 }
 
 /* Doing section */
@@ -296,6 +336,7 @@ address{
     background-color: var(--backgroud-color);
     flex-basis: calc((100% - 24px * 3) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-image {
@@ -303,7 +344,7 @@ address{
 }
 
 .team-member{
-    padding: 32px 0;
+    padding: 32px 16px;
 }
 
 .team-title{
@@ -320,8 +361,76 @@ address{
     font-size: 16px;
     line-height: 1.5;       
     text-align: center;
-    letter-spacing: 0.02em;    
+    letter-spacing: 0.02em;
+    margin-bottom: 8px;     
 }
+
+.social-link{
+    display: flex;
+    gap: 24px;  
+    justify-content: center;
+    
+    
+}
+
+.logo-icon{       
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--button-color);
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    padding: 12px;  
+    
+}
+
+/* Customers*/
+
+.section-customers{    
+    padding: 120px 0;
+}
+
+.customers-item{
+    margin: 0;
+    display: inline-flex;
+    gap: 24px;  
+    justify-content: center;
+    
+    
+}
+.customers-flex{  
+    
+    display: inline-flex;
+    align-items: flex-start;   
+   
+    justify-content: center;    
+      
+    gap: 24px;
+    
+    
+    
+}
+
+
+
+.customers-icon{
+    flex-shrink: 0;
+    border-radius: 4px;
+    border: 1px solid var(--customers-color);    
+    width: 168px;
+    height: 88px;
+    padding: 16px, 32px;  
+    
+    
+}   
+
+
+
+
+
+
+
 
 /* Portfolio*/
 
@@ -352,6 +461,8 @@ address{
     align-items: flex-start;
     border: 1px solid var(--card-border);
     border-radius: 4px;
+
+    transition: background-color var(--animation), color var(--animation), border var(--animation);
 }
 
 .button:hover,
@@ -378,6 +489,12 @@ address{
 
 .card{
     flex-basis: calc((100% - 48px) / 3);
+
+    transition: box-shadow var(--animation);
+}
+ .card:hover,
+ .card:focus{
+    box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .card-name{    
@@ -403,6 +520,39 @@ address{
     color: var(--main-color);   
 }
 
+.cashless-box{
+    position: relative;
+    overflow: hidden;
+}
+
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transform: translateY(100%);
+    transition-property: transform;
+    transition-duration: 400ms;
+    transition-timing-function: ease; 
+
+    display: flex; 
+    background: var(--button-color);
+    padding-top: 40px;
+    padding-left: 32px;
+    padding-right: 32px;       
+}
+
+.card:hover .overlay{
+    transform: translateY(0);
+}
+
+.overlay-text{    
+    color: var(--btn-bgd);   
+    line-height: 24px; /* 150% */
+    letter-spacing: 0.32px;
+}
 
 
 /* Footer */
@@ -421,10 +571,95 @@ footer {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em; 
-    width: 264px;     
+    max-width: 264px;     
 }
 
 .footer-item{
     display: inline-block;
     margin-bottom: 16px;
+}
+
+.footer-social-title{
+    color: var(--backgroud-color);
+    font-weight: 500;
+    line-height: 24px;
+    letter-spacing: 0.32px;
+    margin-left: 269px;
+
+}
+
+.footer-social-link{
+    display: flex;
+    gap: 16px;  
+    justify-content: center;
+    margin-bottom: 16px;
+
+}
+
+
+/*Modal window */
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+
+    width: 100%;
+    height: 100%;
+    background: rgba(46, 47, 66, 0.40);
+    transition: opacity 300ms ease-out, visibility 300ms ease-out;   
+    
+}
+
+.backdrop.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+    visibility: hidden;
+}
+
+.modal{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateX(-50%) translateY(-50%);
+    opacity: 1;
+
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    background: var(--modal-color);
+    box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+    transition: transform 300ms ease-in 300ms, opacity 300ms ease-in 300ms;
+}
+
+.backdrop.is-hidden .modal{
+    transform: translateX(-50%) translateY(-70%);
+    opacity: 0;
+
+}
+
+.modal-btn{
+    position: absolute;
+    top: 24px;
+    right: 24px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    padding: 0;
+    background-color: transparent;
+    border: none;
+
+}
+
+.modal-btn-icon{
+    width: 24px;
+    height: 24px;
+    background-color: var(--card-border);    
+    border-radius: 50%;
+    stroke-width: 1px;
+    stroke: rgba(0, 0, 0, 0.10);
+    padding: 8px;
+
 }
