--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,7 @@
     --card-border: #E7E9FC; 
     --customers-color:#8E8F99; 
     --modal-color: #FCFCFC;
+    --footer-hover: #31d0aa;
 
     --animation: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -83,6 +84,7 @@ p {
 /* header */
 .section-header{
     border-bottom: 1px solid var(--card-border, #E7E9FC);
+    box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .logo{
@@ -180,7 +182,7 @@ address{
 .nav-link::after{
     content: "";
     position: absolute;
-    bottom: 0;
+    bottom: -1px;
     left: 0;
     display: block;
     width: 100%;
@@ -188,6 +190,10 @@ address{
     border-radius: 2px;
 
     transition: background-color var(--animation);
+}
+
+.current{
+    color: var(--button-hover-background);    
 }
 
 .nav-link.current::after{
@@ -281,16 +287,17 @@ address{
     gap: 24px;
 }
 
-
-
-.feature-icon{
-    border-radius: 4px;
-    background: var(--btn-bgd);
-    padding: 24px 100px;   
-    width: 264px;
+.feature-link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
     height: 112px; 
+    background: var(--btn-bgd);
+    border-radius: 4px;
     margin-bottom: 8px;
 }
+
+
 
 /* Doing section */
 .section-doing-container{
@@ -332,11 +339,10 @@ address{
     gap: 24px;
 }
 
-.team-list-item{
-    background-color: var(--backgroud-color);
-    flex-basis: calc((100% - 24px * 3) / 4);
+.team-list-item{    
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08), 0px 1px 1px 0px rgba(46, 47, 66, 0.16), 0px 1px 6px 0px rgba(46, 47, 66, 0.08);
+
 }
 
 .team-image {
@@ -344,7 +350,7 @@ address{
 }
 
 .team-member{
-    padding: 32px 16px;
+    padding: 32px 0;
 }
 
 .team-title{
@@ -368,21 +374,33 @@ address{
 .social-link{
     display: flex;
     gap: 24px;  
-    justify-content: center;
-    
-    
+    justify-content: center;   
 }
 
-.logo-icon{       
+.social-item{
+    width: 40px;
+    height: 40px;
+}
+
+.social-item-nav{
+    width: 100%;
+    height: 100%;
+    background-color: var(--button-color);
+    border-radius: 50%;
+
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: var(--button-color);
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    padding: 12px;  
-    
+    transition: var(--animation);
+}
+
+.social-item-nav:hover,
+.social-item-nav:focus{
+    background-color: var(--button-hover-background);
+}
+
+.logo-icon{
+    fill: var(--btn-bgd)
 }
 
 /* Customers*/
@@ -391,46 +409,38 @@ address{
     padding: 120px 0;
 }
 
-.customers-item{
-    margin: 0;
-    display: inline-flex;
-    gap: 24px;  
-    justify-content: center;
-    
-    
-}
-.customers-flex{  
-    
-    display: inline-flex;
-    align-items: flex-start;   
-   
-    justify-content: center;    
-      
+.customers-flex{
+    display: flex;
     gap: 24px;
-    
-    
-    
 }
 
+.customers-item{
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+}
 
+.customers-link{
+    width: 100%;
+    height: 100%;
+    border: 1px solid var(--customers-color);
+    border-radius: 4px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--customers-color);
+    transition: border-color var(--animation), color var(--animation);
+}
+
+.customers-link:hover,
+.customers-link:focus{
+    border-color: var(--button-hover-background);
+    color: var(--button-hover-background);
+}
 
 .customers-icon{
-    flex-shrink: 0;
-    border-radius: 4px;
-    border: 1px solid var(--customers-color);    
-    width: 168px;
-    height: 88px;
-    padding: 16px, 32px;  
-    
-    
-}   
-
-
-
-
-
-
-
+    fill:  currentColor;
+}
 
 /* Portfolio*/
 
@@ -571,7 +581,7 @@ footer {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em; 
-    max-width: 264px;     
+    width: 264px;     
 }
 
 .footer-item{
@@ -579,23 +589,53 @@ footer {
     margin-bottom: 16px;
 }
 
+.footer-flex{
+    display: flex;
+    align-items: baseline;
+}
+ .footer-trend{
+    margin-right: 120px;
+ }
+
 .footer-social-title{
     color: var(--backgroud-color);
     font-weight: 500;
-    line-height: 24px;
-    letter-spacing: 0.32px;
-    margin-left: 269px;
-
-}
-
-.footer-social-link{
-    display: flex;
-    gap: 16px;  
-    justify-content: center;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
     margin-bottom: 16px;
-
 }
 
+.footer-media-list{
+    display: flex; 
+    gap: 16px;
+}
+
+.footer-media-item{
+    width: 40px;
+    height: 40px;
+}
+
+.footer-media-nav{
+    width: 100%;
+    height: 100%;
+    background-color: var(--button-color);
+    border-radius: 50%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color var(--animation);
+}
+
+.footer-media-nav:hover,
+.footer-media-nav:focus{
+    background-color: var(--footer-hover);
+}
+
+.logo-icon{
+    fill: var(--btn-bgd);
+}
 
 /*Modal window */
 .backdrop{
@@ -605,9 +645,8 @@ footer {
 
     width: 100%;
     height: 100%;
-    background: rgba(46, 47, 66, 0.40);
-    transition: opacity 300ms ease-out, visibility 300ms ease-out;   
-    
+    background-color: rgba(46, 47, 66, 0.40);
+    transition: opacity var(--animation), visibility var(--animation);     
 }
 
 .backdrop.is-hidden{
@@ -620,7 +659,7 @@ footer {
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translateX(-50%) translateY(-50%);
+    transform: translate(-50%, -50%) scale(1);
     opacity: 1;
 
     width: 408px;
@@ -629,37 +668,45 @@ footer {
     background: var(--modal-color);
     box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.20), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
 
-    transition: transform 300ms ease-in 300ms, opacity 300ms ease-in 300ms;
+    transition: transform var(--animation), opacity var(--animation);
 }
 
 .backdrop.is-hidden .modal{
     transform: translateX(-50%) translateY(-70%);
     opacity: 0;
-
 }
 
 .modal-btn{
     position: absolute;
     top: 24px;
     right: 24px;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
-    padding: 0;
-    background-color: transparent;
-    border: none;
+    background-color: var(--card-border);
+    border: 1px solid rgba(0, 0, 0, 0.1);
 
+    padding: 0;
+    cursor: pointer;
+    transition: background-color var(--animation), border var(--animation);
+}
+
+.modal-btn:hover, 
+.modal-btn:focus{
+    background-color: var(--button-hover-background);
+    border: none;
 }
 
 .modal-btn-icon{
-    width: 24px;
-    height: 24px;
-    background-color: var(--card-border);    
-    border-radius: 50%;
-    stroke-width: 1px;
-    stroke: rgba(0, 0, 0, 0.10);
-    padding: 8px;
+    fill: var(--animation); 
+}
 
+.modal-btn-icon:hover,
+.modal-btn-icon:focus{
+    fill: var(--backgroud-color)
 }
